=head1 Krang Changelog

This document contains a list of changes for each release of Krang.

=head2 2.008 - In Development

=over

=item *

Added several new configuration options which allow Krang instances to
run on separate IPs and have different SSL configurations.  [Sam]

=item *

Added a new option for addons, DataSetClasses.  This allows addons to
extend Krang::DataSet and include new objects in KDS files.  [Sam]

=item *

Implemented a system of univerally-unique identfiers (UUIDs) for Krang
objects with keys that may change (ex. stories may change their URL).
This allows updates between machines to propogate these changes
correctly when objects are moved with krang_export and krang_import.
[Sam]

=item *

Added C<PasswordChangeTime> and C<PasswordChangeCount> directives
to allow the forcing of users to change their password every C<PasswordChangeTime>
days and not permit users to use old passwords with C<PasswordChangeCount>
changes. [Michael Peters]

=item *

More uniform password validation. Now also easier to implement a custom
password policy as an addon. [Michael Peters]

=item * 

Added security feature of locking out users after several failed login
attempts. Configurable by the BadLoginCount and BadLoginWait conf
directives. [Michael Peters]

=item *

Fixed bug in Krang::AddOn which would cause multiple version upgrades
which include changes to class.conf to fail.  Specifically, the updated
class.conf (and other libraries) were not being reloaded until after
the upgrade ran.  [Jesse Erlbaum]

=item *

Fixed bug in import where templates that were not deployed on the original
site, where deployed on the target site upon import. [Michael Peters]

=item *

Fixed bug in install/upgrade when using a binary built for SSL
in the way SSL symlinked conf files were handled. [Michael Peters]

=back

=head2 2.007 - Sep 14th, 2006

=over

=item *

Changed ElementClass::ListGroup input_form so that it will not